troca de cores e nomes

--- a/assets/_mail/assinatura-png.html
+++ b/assets/_mail/assinatura-png.html
@@ -42,7 +42,7 @@
                                             style="margin: 0.1px; padding: 5px 0px; font: 12px / 15.3px &quot;Arial Black&quot;, Gadget, sans-serif; color: rgb(68, 68, 68);">
                                             <span
                                                 style="font: 12px / 15.3px &quot;Arial Black&quot;, Gadget, sans-serif; color: rgb(68, 68, 68); cursor: pointer;">CEO
-                                                - Sócio | </span><span style="cursor: pointer;">Togger Tech</span>
+                                                - Sócio | </span><span style="cursor: pointer;">ClockIn.IT Tech</span>
                                         </td>
                                     </tr>
                                     <tr style="cursor: pointer;">
@@ -68,21 +68,21 @@
                                             style="vertical-align: bottom; margin: 0.1px; padding: 8px 0px 0px; font: 12px / 15.3px &quot;Arial Black&quot;, Gadget, sans-serif; color: rgb(0, 0, 1);">
                                             <table cellpadding="0" style="border-collapse: collapse;">
                                                 <tr>
-                                                    <td
+                                                    <!-- <td
                                                         style="cursor: pointer;">
-                                                        <a href="https://www.togger.com.br" target="_blank">site</a></td>
+                                                        <a href="https://www.togger.com.br" target="_blank">site</a></td> -->
                                                     <td
                                                         style="cursor: pointer;">
                                                         <a href="https://wa.me/5514988204600" target="_blank">wpp</a></td>
                                                     <td
                                                         style="cursor: pointer;">
-                                                        <a href="https://www.linkedin.com/company/togger-tech/" target="_blank">linkedin</a></td>
-                                                    <td
+                                                        <a href="https://www.linkedin.com/company/clockinit" target="_blank">linkedin</a></td>
+                                                    <!-- <td
                                                         style="cursor: pointer;">
                                                         <a href="https://www.facebook.com/toggertech" target="_blank">facebook</a></td>
                                                     <td
                                                         style="cursor: pointer;">
-                                                        <a href="https://www.instagram.com/toggertech" target="_blank">instagram</a></td>
+                                                        <a href="https://www.instagram.com/toggertech" target="_blank">instagram</a></td> -->
                                                 </tr>
                                             </table>
                                         </td>
