--- a/assets/_mail/assinatura.html
+++ b/assets/_mail/assinatura.html
@@ -42,7 +42,7 @@
                                             style="margin: 0.1px; padding: 5px 0px; font: 12px / 15.3px &quot;Arial Black&quot;, Gadget, sans-serif; color: rgb(68, 68, 68);">
                                             <span
                                                 style="font: 12px / 15.3px &quot;Arial Black&quot;, Gadget, sans-serif; color: rgb(68, 68, 68); cursor: pointer;">CEO
-                                                - Sócio | </span><span style="cursor: pointer;">Togger Tech</span>
+                                                - Sócio | </span><span style="cursor: pointer;">ClockIn.IT Tech</span>
                                         </td>
                                     </tr>
                                     <tr style="cursor: pointer;">
