--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
 
     <!--====== Title ======-->
-    <title>Togger Tecnologia</title>
+    <title>ClockIn.IT Tecnologia</title>
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--====== Favicon Icon ======-->
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="assets/images/clockin/icone.svg" type="image/png">
 
     <!--====== Animate CSS ======-->
     <link rel="stylesheet" href="assets/css/animate.css">
@@ -74,8 +74,8 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
-                            <a class="navbar-brand" href="index.html">
-                                <img src="assets/images/logo.svg" alt="Logo">
+                            <a class="navbar-brand" style="max-width: 300px;" href="index.html">
+                                <img src="assets/images/clockin/logo-2.svg" alt="Logo">
                             </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse"
                                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -127,9 +127,9 @@
                     <div class="col-lg-8">
                         <div class="header-hero-content text-center">
                             <h3 class="header-sub-title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">
-                                Transformamos idéias em soluções de Tecnologia</h3>
+                                Transformamos ideias em soluções de Tecnologia</h3>
                             <h2 class="header-title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">Somos a
-                                Togger Tecnologia</h2>
+                                ClockIn.IT</h2>
                             <!--<p class="text wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">Transformamos idéias em soluções de Tecnologia</p>
                             <a href="#" class="main-btn wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="1.1s">Get Started</a>-->
                         </div> <!-- header hero content -->
@@ -1003,7 +1003,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-8">
                         <div class="footer-about mt-50 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
                             <a class="logo" href="#">
-                                <img src="assets/images/logo.svg" alt="logo">
+                                <img src="assets/images/clockin/logo-2.svg" alt="logo">
                             </a>
                             <!--<p class="text">Lorem ipsum dolor sit amet consetetur sadipscing elitr, sederfs diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.</p>-->
                             <ul class="social">
@@ -1012,12 +1012,12 @@
                                 <li><a href="tel:+55 14 99866-1694" target="_blank"><i class="lni-phone"></i></a></li>
                                 <li><a href="mailto:contact-site@togger.com.br" target="_blank"><i
                                             class="lni-envelope"></i></a></li>
-                                <li><a href="https://www.linkedin.com/company/togger-tech/" target="_blank"><i
+                                <li><a href="https://www.linkedin.com/company/clockinit" target="_blank"><i
                                             class="lni-linkedin"></i></a></li>    
-                                <li><a href="https://www.facebook.com/toggertech" target="_blank"><i
-                                            class="lni-facebook-filled"></i></a></li>
-                                <li><a href="https://www.instagram.com/toggertech/" target="_blank"><i
-                                            class="lni-instagram-filled"></i></a></li>
+                                <!-- <li><a href="https://www.facebook.com/toggertech" target="_blank"><i
+                                            class="lni-facebook-filled"></i></a></li> -->
+                                <!-- <li><a href="https://www.instagram.com/toggertech/" target="_blank"><i
+                                            class="lni-instagram-filled"></i></a></li> -->
                                 <!--
                                     <li><a href="#" target="_blank"><i class="lni-github-original"></i></a></li>
                                     <li><a href="#" target="_blank"><i class="lni-twitter-filled"></i></a></li>
