--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
-                            <a class="navbar-brand" style="max-width: 300px;" href="index.html">
+                            <a class="navbar-brand mobile"  href="index.html">
                                 <img src="assets/images/clockin/logo-2.svg" alt="Logo">
                             </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse"
