--- a/index.html
+++ b/index.html
@@ -1010,7 +1010,7 @@
                                 <li><a href="https://wa.me/5514998661694" target="_blank"><i
                                             class="lni-whatsapp"></i></a></li>
                                 <li><a href="tel:+55 14 99866-1694" target="_blank"><i class="lni-phone"></i></a></li>
-                                <li><a href="mailto:contato-site@clockin.it.com.br" target="_blank"><i
+                                <li><a href="mailto:contato-site@clockin.it" target="_blank"><i
                                             class="lni-envelope"></i></a></li>
                                 <li><a href="https://www.linkedin.com/company/clockinit" target="_blank"><i
                                             class="lni-linkedin"></i></a></li>    
