--- a/politicaPrivacidade/politicaDemo.html
+++ b/politicaPrivacidade/politicaDemo.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Introdução</h1>
-    <p>Obrigado por escolher fazer parte da nossa comunidade no Clock In It. Estamos comprometidos em proteger suas informações pessoais e seu direito à privacidade. Se você tiver quaisquer questões ou preocupações sobre esta política de privacidade ou nossas práticas com relação às suas informações pessoais, por favor, entre em contato conosco pelo e-mail <a href="mailto:app@clockin.it">email@clockin.it</a>.</p>
+    <p>Obrigado por escolher fazer parte da nossa comunidade no Clock In It. Estamos comprometidos em proteger suas informações pessoais e seu direito à privacidade. Se você tiver quaisquer questões ou preocupações sobre esta política de privacidade ou nossas práticas com relação às suas informações pessoais, por favor, entre em contato conosco pelo e-mail <a href="mailto:policy@clockin.it">policy@clockin.it</a>.</p>
 
     <h2>Informações Que Coletamos</h2>
     <p>Em nosso aplicativo <em>clockin.it Single Demo</em>, coletamos os seguintes tipos de informações:</p>
@@ -39,7 +39,7 @@
 <p>Nosso aplicativo não possui restrição de idade. No entanto, encorajamos todos os usuários a estarem atentos à sua privacidade e segurança online.</p>
 
 <h2>Contato</h2>
-<p>Para quaisquer preocupações relacionadas à privacidade, por favor, entre em contato conosco via e-mail em <a href="mailto:app@clockin.it">email@clockin.it</a>. Estamos comprometidos em resolver quaisquer questões de privacidade que você possa ter.</p>
+<p>Para quaisquer preocupações relacionadas à privacidade, por favor, entre em contato conosco via e-mail em <a href="mailto:policy@clockin.it">policy@clockin.it</a>. Estamos comprometidos em resolver quaisquer questões de privacidade que você possa ter.</p>
 
 <h2>Mudanças nesta Política</h2>
 <p>Podemos atualizar nossa Política de Privacidade de tempos em tempos. Notificaremos você sobre quaisquer mudanças ao publicar a nova Política de Privacidade nesta página. Você é aconselhado a revisar esta Política de Privacidade periodicamente para quaisquer alterações.</p>
