--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand mobile"  href="index.html">
-                                <img src="assets/images/clockin/iconsPNG/logo-2.png" alt="Logo">
+                                <img src="assets/images/clockin/iconsSVG/logo-2.svg" alt="Logo">
                             </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse"
                                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -1003,7 +1003,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-8">
                         <div class="footer-about mt-50 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
                             <a class="logo" href="#">
-                                <img src="assets/images/clockin/iconsPNG/logo-2.png" alt="logo">
+                                <img src="assets/images/clockin/iconsSVG/logo-2.svg" alt="logo">
                             </a>
                             <!--<p class="text">Lorem ipsum dolor sit amet consetetur sadipscing elitr, sederfs diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.</p>-->
                             <ul class="social">
