--- a/pricing/test.html
+++ b/pricing/test.html
@@ -3,21 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exibir Imagem</title>
+    <title>Chatbot Embed</title>
     <style>
         body {
-            text-align: center;
             font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f4f4f4;
         }
-        img {
-            margin-top: 50px;
-            max-width: 100%;
-            height: auto;
+        iframe {
+            width: 400px;
+            height: 600px;
+            border: none;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
         }
     </style>
 </head>
 <body>
-    <h1>Imagem do Servidor OSM</h1>
-    <img src="http://mx.maps.clockin.it:9000/tile/2/2/0.png" alt="Imagem do OSM">
+    <iframe src="https://app.dify.ai/chatbot/NqQvhrdwqu5rmE5y"></iframe>
 </body>
 </html>
