--- a/pricing/test.html
+++ b/pricing/test.html
@@ -24,6 +24,6 @@
     </style>
 </head>
 <body>
-    <iframe src="https://app.dify.ai/chatbot/NqQvhrdwqu5rmE5y"></iframe>
+    <iframe src="https://udify.app/chatbot/NqQvhrdwqu5rmE5y"></iframe>
 </body>
 </html>
