--- a/subdomains/dev/index.html
+++ b/subdomains/dev/index.html
@@ -38,12 +38,12 @@
         <img src="logo-dark.png" alt="Logo">
     </div>
 
-    <!-- <footer>
-        <h2>Contact Us</h2>
-        <p>123 Main Street</p>
-        <p>City, State Zip Code</p>
-        <p>Phone: 123-456-7890</p>
-    </footer> -->
+    <footer>
+        <!--<h2>Contact Us</h2>
+        <p>contact@clockin.it</p>-->
+        <a href="/architeture/architeture.svg" target="_blank"
+            style="color: #fff; text-decoration: underline;">Architecture Diagram</a>
+    </footer>
 </body>
 
 </html>
