--- a/politicaPrivacidade/politicaDemo.html
+++ b/politicaPrivacidade/politicaDemo.html
@@ -1,5 +1,35 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            line-height: 1.6;
+            color: #333;
+            background-color: #f9f9f9;
+        }
+        h1, h2, h3 {
+            color: #0056b3;
+        }
+        p {
+            margin-bottom: 15px;
+        }
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .content {
+            max-width: 800px;
+            margin: auto;
+            padding: 20px;
+            background: #fff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+    </style>
 <head>
     <meta charset="UTF-8">
     <title>Política de Privacidade - clockin.it</title>
