--- a/politicaPrivacidade/politicaDemo.html
+++ b/politicaPrivacidade/politicaDemo.html
@@ -46,7 +46,7 @@
         }
     </script>
 </head>
-<body onload="changeLanguage('pt')">
+<body onload="changeLanguage('en')">
 
     <div>
         <label for="language-select">Choose a language:</label>
