--- a/meet.html
+++ b/meet.html
@@ -2,7 +2,10 @@
 <html>
     <head>
     <script src='https://8x8.vc/vpaas-magic-cookie-56fd228531b042e1a5342ad8a70ff956/external_api.js' async></script>
-    <style>html, body, #jaas-container { height: 100%; }</style>
+    <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; };
+    html, body, #jaas-container { height: 100dvh; }
+    </style>
     <script type="text/javascript">
         window.onload = () => {
         const api = new JitsiMeetExternalAPI("8x8.vc", {
