border no scoll

--- a/meet.html
+++ b/meet.html
@@ -3,8 +3,8 @@
     <head>
     <script src='https://8x8.vc/vpaas-magic-cookie-56fd228531b042e1a5342ad8a70ff956/external_api.js' async></script>
     <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    html, body, #jaas-container { height: 100dvh; overflow-x: hidden; }
+    * { margin: 0; padding: 0; border : 0; box-sizing: border-box; }
+    html, body, #jaas-container { height: 100dvh; overflow-x: hidden; overflow-y: hidden; }
     </style>
     <script type="text/javascript">
         window.onload = () => {
