add pages tutorial, refac policy, add page termos

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--====== Favicon Icon ======-->
-    <link rel="shortcut icon" href="assets/images/clockin/icone.svg" type="image/png">
+    <link rel="shortcut icon" href="assets/images/clockin/iconsSVG/icone.svg" type="image/svg+xml">
 
     <!--====== Animate CSS ======-->
     <link rel="stylesheet" href="assets/css/animate.css">
@@ -74,7 +74,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
-                            <a class="navbar-brand mobile"  href="index.html">
+                            <a class="navbar-brand mobile" href="index.html">
                                 <img src="assets/images/clockin/iconsSVG/logo-2.svg" alt="Logo">
                             </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -98,6 +98,9 @@
                                     </li>
                                     <li class="nav-item">
                                         <a class="page-scroll" href="#about">Sobre</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="tutorial/index.html">Guia</a>
                                     </li>
                                     <!-- <li class="nav-item">
                                         <a class="page-scroll" href="#facts">Why</a>
@@ -1013,7 +1016,7 @@
                                 <li><a href="mailto:contato-site@clockin.it" target="_blank"><i
                                             class="lni-envelope"></i></a></li>
                                 <li><a href="https://www.linkedin.com/company/clockinit" target="_blank"><i
-                                            class="lni-linkedin"></i></a></li>    
+                                            class="lni-linkedin"></i></a></li>
                                 <!-- <li><a href="https://www.facebook.com/toggertech" target="_blank"><i
                                             class="lni-facebook-filled"></i></a></li> -->
                                 <!-- <li><a href="https://www.instagram.com/toggertech/" target="_blank"><i
@@ -1075,9 +1078,15 @@
                     <div class="col-lg-12">
                         <div class="copyright d-sm-flex justify-content-between">
                             <div class="copyright-content">
-                                <p class="text">Designed and Developed by <a href="https://uideck.com"
-                                        rel="nofollow">UIdeck</a></p>
+                                <p class="text">© 2026 ClockIn.IT. Todos os direitos reservados.</p>
                             </div> <!-- copyright content -->
+                            <div class="copyright-menu">
+                                <ul>
+                                    <li><a href="politicaPrivacidade/index.html">Política de Privacidade</a></li>
+                                    <li><a href="termosUso/index.html">Termos de Uso</a></li>
+                                    <li><a href="tutorial/index.html">Tutorial</a></li>
+                                </ul>
+                            </div>
                         </div> <!-- copyright -->
                     </div>
                 </div> <!-- row -->
