--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                         <a class="page-scroll" href="#about">Sobre</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="tutorial/index.html">Guia</a>
+                                        <a href="pages/tutorial/index.html">Guia</a>
                                     </li>
                                     <!-- <li class="nav-item">
                                         <a class="page-scroll" href="#facts">Why</a>
@@ -1082,9 +1082,9 @@
                             </div> <!-- copyright content -->
                             <div class="copyright-menu">
                                 <ul>
-                                    <li><a href="politicaPrivacidade/index.html">Política de Privacidade</a></li>
-                                    <li><a href="termosUso/index.html">Termos de Uso</a></li>
-                                    <li><a href="tutorial/index.html">Tutorial</a></li>
+                                    <li><a href="pages/politicaPrivacidade/index.html">Política de Privacidade</a></li>
+                                    <li><a href="pages/termosUso/index.html">Termos de Uso</a></li>
+                                    <li><a href="pages/tutorial/index.html">Guia</a></li>
                                 </ul>
                             </div>
                         </div> <!-- copyright -->
