--- a/pages/politicaPrivacidade/index.html
+++ b/pages/politicaPrivacidade/index.html
@@ -8,7 +8,7 @@
         content="Política de Privacidade ClockIn-It - Transparência no tratamento de dados pessoais" />
     <title>ClockIn.It - Política de Privacidade</title>
 
-    <link rel="shortcut icon" href="../assets/images/clockin/iconsSVG/icone.svg" type="image/svg+xml" />
+    <link rel="shortcut icon" href="../../assets/images/clockin/iconsSVG/icone.svg" type="image/svg+xml" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,7 +16,7 @@
         rel="stylesheet" />
 
     <!--====== Line Icons CSS ======-->
-    <link rel="stylesheet" href="../assets/css/LineIcons.css" />
+    <link rel="stylesheet" href="../../assets/css/LineIcons.css" />
 
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -26,8 +26,8 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo-section">
-                    <a href="../index.html">
-                        <img src="../assets/images/clockin/iconsSVG/logo.svg" alt="Logo" />
+                    <a href="../../index.html">
+                        <img src="../../assets/images/clockin/iconsSVG/logo.svg" alt="Logo" />
                     </a>
                 </div>
                 <div class="language-selector">
@@ -321,7 +321,7 @@
                 <div class="cta-buttons">
                     <!-- <a href="mailto:policy@clockin.it" class="btn btn-primary" data-i18n="cta.btn_contact">Entrar em
                         Contato</a> -->
-                    <a href="../index.html" class="btn btn-secondary" data-i18n="cta.btn_home">Voltar a Página
+                    <a href="../../index.html" class="btn btn-secondary" data-i18n="cta.btn_home">Voltar a Página
                         Inicial</a>
                 </div>
             </div>
@@ -335,10 +335,9 @@
                 <p class="footer-copyright" data-i18n="footer.copyright">© 2026 ClockIn.IT. Todos os direitos
                     reservados.</p>
                 <div class="footer-links">
-                    <a href="../politicaPrivacidade/index.html" class="footer-link"
-                        data-i18n="footer.privacy">Privacidade</a>
+                    <a href="index.html" class="footer-link" data-i18n="footer.privacy">Privacidade</a>
                     <a href="../termosUso/index.html" class="footer-link" data-i18n="footer.terms">Termos de Uso</a>
-                    <a href="../tutorial/index.html" class="footer-link" data-i18n="footer.tutorial">Tutorial</a>
+                    <a href="../tutorial/index.html" class="footer-link" data-i18n="footer.tutorial">Guia</a>
                 </div>
             </div>
         </div>
