--- a/pages/termosUso/index.html
+++ b/pages/termosUso/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Termos de Uso ClockIn-It - Regras e condições para utilização do sistema REP-P" />
     <title>Termos de Uso - ClockIn.IT</title>
 
-    <link rel="shortcut icon" href="../assets/images/clockin/iconsSVG/icone.svg" type="image/svg+xml" />
+    <link rel="shortcut icon" href="../../assets/images/clockin/iconsSVG/icone.svg" type="image/svg+xml" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,7 +15,7 @@
         rel="stylesheet" />
 
     <!--====== Line Icons CSS ======-->
-    <link rel="stylesheet" href="../assets/css/LineIcons.css" />
+    <link rel="stylesheet" href="../../assets/css/LineIcons.css" />
 
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -25,8 +25,8 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo-section">
-                    <a href="../index.html">
-                        <img src="../assets/images/clockin/iconsSVG/logo.svg" alt="Logo" />
+                    <a href="../../index.html">
+                        <img src="../../assets/images/clockin/iconsSVG/logo.svg" alt="Logo" />
                     </a>
                 </div>
                 <div class="language-selector">
@@ -256,7 +256,7 @@
                 <div class="cta-buttons">
                     <!-- <a href="mailto:suporte@clockin.it" class="btn btn-primary" data-i18n="cta.btn_contact">Entrar em
                         Contato</a> -->
-                    <a href="../index.html" class="btn btn-secondary" data-i18n="cta.btn_home">Voltar a Página
+                    <a href="../../index.html" class="btn btn-secondary" data-i18n="cta.btn_home">Voltar a Página
                         Inicial</a>
                 </div>
             </div>
@@ -272,8 +272,8 @@
                 <div class="footer-links">
                     <a href="../politicaPrivacidade/index.html" class="footer-link"
                         data-i18n="footer.privacy">Privacidade</a>
-                    <a href="../termosUso/index.html" class="footer-link" data-i18n="footer.terms">Termos de Uso</a>
-                    <a href="../tutorial/index.html" class="footer-link" data-i18n="footer.tutorial">Tutorial</a>
+                    <a href="index.html" class="footer-link" data-i18n="footer.terms">Termos de Uso</a>
+                    <a href="../tutorial/index.html" class="footer-link" data-i18n="footer.tutorial">Guia</a>
                 </div>
             </div>
         </div>
