--- a/pages/tutorial/index.html
+++ b/pages/tutorial/index.html
@@ -8,7 +8,7 @@
         content="Tutorial completo ClockIn-It - Guia passo a passo para configuração e uso do sistema" />
     <title>ClockIn.It - Guia</title>
 
-    <link rel="shortcut icon" href="../assets/images/clockin/iconsSVG/icone.svg" type="image/svg+xml" />
+    <link rel="shortcut icon" href="../../assets/images/clockin/iconsSVG/icone.svg" type="image/svg+xml" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,7 +16,7 @@
         rel="stylesheet" />
 
     <!--====== Line Icons CSS ======-->
-    <link rel="stylesheet" href="../assets/css/LineIcons.css" />
+    <link rel="stylesheet" href="../../assets/css/LineIcons.css" />
 
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -26,8 +26,8 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo-section">
-                    <a href="/index.html">
-                        <img src="../assets/images/clockin/iconsSVG/logo.svg" alt="Logo" />
+                    <a href="../../index.html">
+                        <img src="../../assets/images/clockin/iconsSVG/logo.svg" alt="Logo" />
                     </a>
                 </div>
                 <div class="language-selector">
@@ -494,6 +494,14 @@
                                                 </div>
                                                 <ul class="step-list numbered">
                                                     <li>
+                                                        <span data-i18n="acc4.step1.info0">Se o Coletor Quiosque ainda
+                                                            não foi configurado, </span>
+                                                        <a href="#collectorMultiple"
+                                                            onclick="event.preventDefault(); toggleAccordion('collectorMultiple', true); return false;"
+                                                            aria-label="Ir para configuração do Coletor Quiosque">clique
+                                                            aqui para configurar</a>
+                                                    </li>
+                                                    <li>
                                                         <span data-i18n="acc4.step1.info1">Baixe o app "Clockin
                                                             Register" na Play Store</span>
                                                         <a href="https://play.google.com/store/apps/details?id=it.clockin.register"
@@ -748,7 +756,7 @@
                 <div class="cta-buttons">
                     <!-- <a href="mailto:suporte@seusite.com.br?subject=Ajuda%20com%20Configuração" class="btn btn-primary"
                         data-i18n="cta.btn_support">Contatar Suporte</a> -->
-                    <a href="../index.html" class="btn btn-secondary" data-i18n="cta.btn_home">Voltar a Página
+                    <a href="../../index.html" class="btn btn-secondary" data-i18n="cta.btn_home">Voltar a Página
                         Inicial</a>
                 </div>
             </div>
@@ -764,8 +772,9 @@
                 <div class="footer-links">
                     <a href="../politicaPrivacidade/index.html" class="footer-link"
                         data-i18n="footer.privacy">Privacidade</a>
-                    <a href="../termosUso/index.html" class="footer-link" data-i18n="footer.terms">Termos de Uso</a>
-                    <a href="../tutorial/index.html" class="footer-link" data-i18n="footer.tutorial">Tutorial</a>
+                    <a href="../termosUso/index.html" class="footer-link" data-i18n="footer.terms">Termos de
+                        Uso</a>
+                    <a href="index.html" class="footer-link" data-i18n="footer.tutorial">Guide</a>
                 </div>
             </div>
         </div>
